--- a/Lecture12.ipynb
+++ b/Lecture12.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:f33fa441b8be130bce9861b0897b7d5da6d041dfa0bcb7407251369984a884ca"
+  "signature": "sha256:b77f82551eb71798bdaa97f799922f8b3258e0f03814b87137fea852ff9810db"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -81,12 +81,14 @@
       "    * Discretization\n",
       "    * Finite Difference Methods\n",
       "    * The Explicit Methods\n",
-      "    * Consistency, Stability and Convergence\n",
       "    * The Implicit Methods\n",
       "    * The Crank-Nicholson Method\n",
+      "    * Consistency, Stability and Convergence\n",
       "       \n",
       "    \n",
       "* Numerical Examples\n",
+      "    * Vanilla European Call\n",
+      "    * Up-And-Out Barrier Call\n",
       "\n"
      ]
     },
@@ -116,13 +118,13 @@
       "$$\n",
       "\n",
       "\n",
-      "* It can be classified into three categories: **Hyperbolic, Parabolic and Elliptic**\n",
+      "* Classified into: **Hyperbolic, Parabolic and Elliptic**\n",
       "\n",
       "\n",
       "* In general, the different types of equations make a big difference in how the solutions behave and\n",
       "\n",
       "\n",
-      "* on how we can solve them more effectively\n",
+      "* On how we can solve them more effectively\n",
       "\n",
       "\n",
       "\n",
@@ -372,7 +374,7 @@
       "* On the other hand, the mesh can be relatively coarse if the function is smooth and changing slowly\n",
       "\n",
       "\n",
-      "* How do I know where to put more points and where to put less before solving the solution: concepts of adaptive mesh\n",
+      "* How do I know where to put more points and where to put less before knowing the solution: concepts of adaptive mesh\n",
       "\n",
       "\n",
       "* In finance, the time grid is well advised to keep the **important** dates as grid points: such as cash flow dates, contractual schedule dates, etc. The spacing of these dates is most likely not uniform.\n",
