--- a/ClassPolicies.ipynb
+++ b/ClassPolicies.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:35a9a0da8a390ecbec97d0c6656efc4cea3867d3d749d75ef42ccdc42aea9512"
+  "signature": "sha256:440c6bb8c785926ea94a87cf8c3893610e35d4a9d1cd1f54b2a7f63627258a5e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -88,11 +88,9 @@
       "* If not sure, please ask the question in the class forum\n",
       "* Copying other people's homework solutions will not be tolerated\n",
       "  * both parties will be punished(we can't and don't want to distinguish who copied whom)\n",
-      "* Copying from previous' year's homework solution is also considered cheating. \n",
+      "* Copying from previous' year's homework solution is a form of cheating.\n",
       " \n",
-      "We will actively police cheating:\n",
-      "* First time cheating in homework: receive 0 for the homework, which will count towards your final score\n",
-      "* Second time cheating in homework: fail the class"
+      "We will actively police cheating, cheaters will be severely punished, up to failing the class. "
      ]
     }
    ],
