--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -35,7 +35,7 @@
      "source": [
       "# Scientific Computing in Finance\n",
       "\n",
-      "* MATH-GA 2048, Spring 2016\n",
+      "* MATH-GA 2048, Spring 2017\n",
       "* Courant Institute of Mathematical Sciences\n",
       "* New York University"
      ]
@@ -50,19 +50,14 @@
      "source": [
       "## Instructors\n",
       "\n",
-      "#### Hongwei Cheng\n",
-      "* Head of Research and CRO, Mill Hill Capital\n",
-      "* Ph.D. Mathematics, New York University\n",
-      "\n",
       "#### Yadong Li\n",
-      "* Head of Trading Book Risk Modelling, Quantitative Analytics, Barclays\n",
+      "* Head of Trading Book Risk and XVA Modelling, Quantitative Analytics, Barclays\n",
       "* Ph.D. in Physics, M.S. in Computer Sciences, University of Wisconsin-Madison\n",
       "* Master of Financial Engineering, University of California, Berkeley \n",
       "\n",
-      "## Teaching Assitant\n",
-      "\n",
-      "#### Maulik Desai\n",
-      "* Ph.D. EECS, Columbia University"
+      "#### Wujiang Lou\n",
+      "* Senior trader, Global Fixed Income, HSBC\n",
+      "* Ph.D. in Aeronautics and Astronautics, Nanjing University"
      ]
     },
     {
