--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -483,7 +483,7 @@
       "\n",
       "* e.g., stock returns are normally distributed\n",
       "\n",
-      "Minimizing cross entropy is an ideal objective function to capture prior beliefs\n",
+      "Maximizing cross entropy is an ideal objective function to capture prior beliefs\n",
       "* Only introduce minimal perturbation to the prior beliefs $\\bs q$\n",
       "* While incorporating additional constraints to the distribution $\\bs p$"
      ]
