--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:c97a508c5713eefb88864c966f616d671e2a4845e397c6eb1915b73194ffb0c0"
+  "signature": "sha256:1d2f5b5698ac1dcbc9c9ae48fd22de050ba410d418747749a1524936ea43d429"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -56,8 +56,7 @@
       "\n",
       "The lecture slides are all generated from the IPython notebooks sources. You can get a copy of the source by:\n",
       "\n",
-      "* download the zip package from the source url above, or\n",
-      "* (recommended): using the git command line tool: \n",
+      "* using the git command line tool: \n",
       "  * install git command line tool from http://git-scm.com/book/en/v2/Getting-Started-Installing-Git\n",
       "  * clone the source code to your local folder by issue the following command, which creates a new folder of nyumath2048, and downloads all the source files from github:\n",
       "  \n",
@@ -82,23 +81,21 @@
       "\n",
       "**Python version 2.7.x**\n",
       "* Python 3.x is not backward compatible\n",
-      "* either 32bit or 64bit version works \n",
+      "* either 32bit or 64bit version works, 64bit is recommended \n",
       "\n",
       "Recommend using a Python distribution:\n",
       "\n",
+      "* <a href=http://continuum.io/downloads>Anaconda</a>: a popular free Python distribution\n",
       "* <a href=https://www.enthought.com/products/canopy/>Enthought Canopy</a>: free for students\n",
-      "* <a href=http://continuum.io/downloads>Anaconda</a>: another popular free Python distribution\n",
       "\n",
       "Both distributions come with necessary packages like IPython/numpy/pandas etc. \n",
       "\n",
-      "* Enthought canopy comes with a graphical package manager\n",
       "* Anaconda comes with command line package manager ```conda```\n",
+      "* Enthought canopy comes with a graphical package manager\n",
       "* <a href=https://pypi.python.org/pypi/pip>pip</a> can be used to install Python packages that are not part of Enthought Anaconda distribution (rarely needed)\n",
       "* both distributions support major OSes\n",
       "\n",
-      "Difficulties of installing Enthought Canopy has been reported on MacOS, Anaconda is recommended for MacOS.\n",
-      "\n",
-      "(Please inform us if you have succeeded with using Enthought on MacOS)."
+      "Difficulties of installing Enthought Canopy has been reported on MacOS, Anaconda is recommended for MacOS."
      ]
     },
     {
@@ -145,7 +142,7 @@
       "\n",
       "* this step allows python interpretor to find the python modules for the class\n",
       "* you won't be able to run the class IPython notebook without performing this step\n",
-      "* many students have run into problems because they ignored this step last year\n",
+      "* many past students have run into problems because they ignored this step\n",
       "\n",
       "If you don't know what environment variable is or how to create it in your OS, google it"
      ]
