--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -36,8 +36,7 @@
       "# Scientific Computing in Finance\n",
       "\n",
       "* MATH-GA 2048, Spring 2017\n",
-      "* Courant Institute of Mathematical Sciences\n",
-      "* New York University"
+      "* Courant Institute of Mathematical Sciences, New York University"
      ]
     },
     {
@@ -145,8 +144,8 @@
       "| 4-5 | Rootfinding and interpolation | Curve building | Y. Li |\n",
       "| 6 | Derivatives and integration | Hedging, Risk Transformation | Y. Li |\n",
       "| 7-8 | Monte Carlo simulation | Exotic pricing | Y. Li |\n",
-      "| 9-10 | Optimization | Model calibration | H. Cheng |\n",
-      "| 11-12 | ODE/PDE | Pricing | H. Cheng |\n",
+      "| 9-10 | Optimization | Model calibration | W. Lou |\n",
+      "| 11-12 | ODE/PDE | Pricing | W. Lou |\n",
       "| 13 | Entropy and Allocation | Advanced practical problems | Y. Li |"
      ]
     },
