--- a/ClassPolicies.ipynb
+++ b/ClassPolicies.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:440c6bb8c785926ea94a87cf8c3893610e35d4a9d1cd1f54b2a7f63627258a5e"
+  "signature": "sha256:18450e7f6016803687c7d300b51bee9e6cf39baf091bb30f426aa16e268f9039"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -52,8 +52,7 @@
       "## Homework\n",
       "\n",
       "Homework is assigned weekly at the end of the lecture\n",
-      "* Due before the start of the next lecture\n",
-      "* You should complete your homework on your own, homework is not a team exercise\n",
+      "* Homework can be completed by groups of two, you can form your own groups. However, you are strongly encouraged to complete homework on your own.\n",
       "* In general, late homework won't be accepted. Exceptions will only be made if certain event affects multiple students (e.g., a super-day interview, or a firm event).\n",
       "* One lowest scored homework won't count towards your final homework score\n",
       "\n",
