--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -187,9 +187,8 @@
       "Available online at: http://yadongli.github.io/nyumath2048\n",
       "\n",
       "\n",
-      "## Grades (tentative)\n",
-      "* Homework 30%\n",
-      "* Project (tentative 20%, we may cancel project and move this portion to the homework)\n",
+      "## Grading\n",
+      "* Homework 50%, can be done by groups of two students\n",
       "* Final 50% \n",
       "* Extra credits \n",
       " * extra credit homework problems\n",
@@ -322,7 +321,9 @@
      "source": [
       "In practice, what often trumps everything else is: \n",
       "\n",
-      "## Time to market !!"
+      "## Time to market !!\n",
+      "\n",
+      "* First mover has significant advantage: Facebook, Google etc."
      ]
     },
     {
@@ -408,6 +409,7 @@
      "source": [
       "#### Freedom is slavery\n",
       " * Must be disciplined in testing, code review, releases etc. \n",
+      " * Limit the interface of your module (or external commitments)\n",
       " * Freedom $\\rightarrow$ possibilities $\\rightarrow$ complexity $\\rightarrow$ unmodifiable code $\\rightarrow$ slavery"
      ]
     },
@@ -512,8 +514,8 @@
      "source": [
       "Python resources\n",
       "\n",
+      "* Anaconda: a popular Python distribution with essential packages, best choice\n",
       "* Enthought Canopy: a commercial Python distribution, free for students\n",
-      "* Anaconda: another popular and free Python distribution\n",
       "* Google and Youtube\n",
       "\n",
       "Python version:\n",
