--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:e169efec59abe38b9449ad9613a27ee18bd6f193d08b5c87b2508ecb64ffda1b"
+  "signature": "sha256:840412c58437b9c414cc9d26eecb1897326f5ad069a50af0506dc07388752e3b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -171,7 +171,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Book problems"
+      "Book problems (from Goodman and Bindel Book)"
      ]
     },
     {
