--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -88,7 +88,7 @@
      "source": [
       "# Least Square\n",
       "\n",
-      "regression: noun, a return to a former or less developed state"
+      "Robert Wilson: Consciousness itself is an infinite regress. This explains coincidences. "
      ]
     },
     {
@@ -521,7 +521,7 @@
      "source": [
       "# QR Decomposition\n",
       "\n",
-      "orthogonal: adjective, at right angles"
+      "Nassim Taleb: Decomposition, for most, starts when they leave the free, social, and uncorrupted college life for the solitary confinement of professions and nuclear families."
      ]
     },
     {
