--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -747,7 +747,7 @@
       "\n",
       "An orthogonal transformation representing reflection over a hyper plane, with a normal vector $\\hat {\\bs u}$ with unit L-2 norm:\n",
       "\n",
-      "$$ H \\bs x = (I - {2\\bs{\\hat u \\hat u}^T}) \\bs x = \\bs x - 2 (\\hat{\\bs u}^T \\bs x) \\bs{\\hat u} $$\n",
+      "$$ H \\bs x = (I - {2\\bs{\\hat u \\hat u}^T}) \\bs x = \\bs x - 2 \\bs{\\hat u} (\\hat{\\bs u}^T \\bs x)  $$\n",
       "\n",
       "Household transformation can reflect an arbitrary vector $\\bs x$ to $ \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1$, where $\\hat{\\bs e}_1$ can be any unit vector. \n",
       "\n",
@@ -2047,15 +2047,15 @@
       "\n",
       "Given $\\bs{u_1, v_1}$ are the first singular vectors of $M$:\n",
       "\n",
-      "* $\\bs x^T \\bs v_1 = 0  \\iff (M \\bs x)^T \\bs u_1 = 0$ \n",
+      "$$\\bs x^T \\bs v_1 = 0  \\iff (M \\bs x)^T \\bs u_1 = 0 \\iff \\bs u_1^T M \\bs x  = 0 $$\n",
       "\n",
       "because:\n",
       "\n",
       "$$ (M \\bs x)^T \\bs u_1 = \\bs x^T M^T \\bs u_1 = \\bs x^T \\sigma_1 \\bs v_1  = 0 $$\n",
       "\n",
-      "Therefore, among those unit $\\bs u, \\bs v$ that are orthogonal to $\\bs{u_1, v_1}$ :\n",
+      "Therefore, if we only consider those $\\bs u^T \\bs u_1^ = 0$, the corresponding $\\bs v$ must be orthogonal to $\\bs v_1$ :\n",
       "\n",
-      "* $\\bs {u_2, v_2}$ maximizes $\\bs u^T M \\bs v$  \n",
+      "* $\\bs {u_2, v_2}$ maximizes $\\bs u^T M \\bs v$  among those $(\\bs u, \\bs v)$ orthogonal to $\\bs u_1, \\bs v_1$\n",
       "* this process can repeat for all singular vectors (assuming singular values are distinct)"
      ]
     },
