--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -2213,7 +2213,7 @@
       "When working with near singular matrix,  SVD can identify ill-conditioned area:\n",
       "\n",
       "* real world covariance and correlation matrix are often near singular\n",
-      "* numerical stability arises when inputs are very close to signular vectors with small singular values \n",
+      "* numerical instability arises when inputs are very close to signular vectors with small singular values \n",
       "  * e.g, when return forecast is in the same direction as the last singular vector ..."
      ]
     },
