--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -69,7 +69,7 @@
       }
      },
      "source": [
-      "# Lecure 4: Rootfinding and Interpolation\n",
+      "# Lecture 4: Rootfinding and Interpolation\n",
       "\n",
       "## Topics\n",
       "* Root finding\n",
