--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -156,7 +156,7 @@
       "## How to compute Deltas\n",
       "\n",
       "Deltas are often computed by brute force\n",
-      "  * bump, recalibrate, revalue\n",
+      "  * bump, recalibrate (curves & other model parameters), revalue\n",
       "  * slow, but generic and robust\n",
       "  \n",
       "Advanced method of computing Delta\n",
@@ -625,6 +625,28 @@
      "metadata": {},
      "source": [
       "* note that the deltas are usually communicated in PV changes for 1bps change in spread, thus the $10^{-4}$ factor."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Compute deltas numerically\n",
+      "\n",
+      "Steps to compute $\\frac{\\partial v}{\\partial \\bs q}$ numerically:\n",
+      "\n",
+      "* bump the quoted spread of one tenor point $q_i$ by a small amount (e.g., 1bps), re-bootstrap the whole CDS curve\n",
+      "  * for each tenor point ```j=1:maturity```\n",
+      "    * root search the knot value of the hazard rate $h_j$, for each trial value of $h_j$\n",
+      "      * build tension spline interpolation on the whole hazard rate term structure $\\bs h$\n",
+      "      * price the benchmark CDS instrument $b_j$, \n",
+      "      * continue root search until $b_j$ matches the market price to a high precision\n",
+      "* price the besoke instrument $v$ using the bumped curve\n",
+      "* compute the delta using finite difference"
      ]
     },
     {
