--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -639,9 +639,9 @@
       "\n",
       "Steps to compute $\\frac{\\partial v}{\\partial \\bs q}$ numerically:\n",
       "\n",
-      "* bump the quoted spread of one tenor point $q_i$ by a small amount (e.g., 1bps), re-bootstrap the whole CDS curve\n",
+      "* bump one tenor point $q_i$, re-bootstrap the whole CDS curve\n",
       "  * for each tenor point ```j=1:maturity```\n",
-      "    * root search the knot value of the hazard rate $h_j$, for each trial value of $h_j$\n",
+      "    * root search the knot of hazard rate $h_j$, for each trial value of $h_j$\n",
       "      * build tension spline interpolation on the whole hazard rate term structure $\\bs h$\n",
       "      * price the benchmark CDS instrument $b_j$, \n",
       "      * continue root search until $b_j$ matches the market price to a high precision\n",
