--- a/Lecture5.ipynb
+++ b/Lecture5.ipynb
@@ -640,8 +640,8 @@
       "Steps to compute $\\frac{\\partial v}{\\partial \\bs q}$ numerically:\n",
       "\n",
       "* bump one tenor point $q_i$, re-bootstrap the whole CDS curve\n",
-      "  * for each tenor point ```j=1:maturity```\n",
-      "    * root search the knot of hazard rate $h_j$, for each trial value of $h_j$\n",
+      "  * for each tenor point ```j=1:maturity```, root search the knot value of hazard rate $h_j$\n",
+      "    * for each trial value of $h_j$\n",
       "      * build tension spline interpolation on the whole hazard rate term structure $\\bs h$\n",
       "      * price the benchmark CDS instrument $b_j$, \n",
       "      * continue root search until $b_j$ matches the market price to a high precision\n",
