various error corrections

--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -829,7 +829,8 @@
       "\n",
       "A tension spline is originally defined as: $f^{(4)}(x) - \\lambda f''(x) = 0$\n",
       "\n",
-      "* it models a physical spline stretchd by a tension force of $\\lambda$\n",
+      "* it models a physical spline stretchd by a tension force \n",
+      "* $\\lambda$ is the ratio of the tension force over the rigidity of the spline\n",
       "* it reduces to cubic spline when $\\lambda = 0$\n",
       "* with $\\lambda \\rightarrow \\infty$, the spline is streched to piece-wise straight lines\n",
       "* the solution is a combination of exponential and linear functions of $x$"
@@ -1826,11 +1827,11 @@
       "\n",
       "| |$h(3m)$|$h(6m)$|$h(1Y)$|$h(2Y)$|$h(5Y)$|\n",
       "|:----:|:----:| :----: | :----: | :----: | :----: | :----: |\n",
-      "|$q(3m)$| * | | | | | \n",
-      "|$q(6m)$| * | * | | | | \n",
-      "|$q(1Y)$| * | * | * | | | \n",
-      "|$q(2Y)$| * | * | * | * | | \n",
-      "|$q(5Y)$| * | * | * | * | * |\n",
+      "|$q(3m)$| X | | | | | \n",
+      "|$q(6m)$| * | X | | | | \n",
+      "|$q(1Y)$| * | * | X | | | \n",
+      "|$q(2Y)$| * | * | * | X | | \n",
+      "|$q(5Y)$| * | * | * | * | X |\n",
       "\n",
       "Bootstrap is the standard method to build curves with triangular dependency:\n",
       "* Solve the knot values one by one, using benchmark instruments with increasing maturities"
