--- a/Homework4.ipynb
+++ b/Homework4.ipynb
@@ -63,7 +63,7 @@
       "mats = np.array([1, 2, 3, 5, 7, 10, 12, 15, 20, 25])*1.\n",
       "par = np.array([.042, .043, .047, .054, .057, .06, .061, .059, .056, .0555])\n",
       "\n",
-      "df_swap = pd.DataFrame(np.array([par]).T*100, columns=[\"Par Spread (%)\"], \n",
+      "df_swap = pd.DataFrame(np.array([par]).T*100, columns=[\"Par Rate (%)\"], \n",
       "                       index=map(lambda m: '%dY' % m, mats))\n",
       "fmt.displayDF(df_swap.T, 2, 2)"
      ],
