--- a/Homework8.ipynb
+++ b/Homework8.ipynb
@@ -93,6 +93,7 @@
       "|  Maturity(Years) | 1 | 2 | 2 | 3 | 4 | 5 | 5 | 6 | 7 | 8 |  8 | 9 |\n",
       "\n",
       "\n",
+      "Consider two excess cash scenarios: 1) not reused at each period. 2) reinvested at 1% interest rate and reused. \n",
       "Find the **least cost** portfolio of bonds so that the pension fund can meet its future liabilities. Please show your LP problem set up.\n"
      ]
     }
