--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -493,6 +493,7 @@
       "\n",
       "The historical mean estimator $\\hat u = \\frac{1}{n}\\sum_i r_i $ has an error of:\n",
       "* $\\std(\\hat \\mu) = \\frac{\\sigma}{\\sqrt{10}} = 0.079$, the error is large because we only have 10 independent sample\n",
+      "* using daily return does not help either: $\\std(\\hat \\mu) = 250 \\frac{\\sigma/\\sqrt{250}}{\\sqrt{10 \\times 250}} = 0.079$\n",
       "\n",
       "The vol is estimated as the standard deviation $\\hat s$ of the daily return $r_i$:\n",
       "* error in annualized vol is $\\sigma{\\sqrt{\\frac{\\beta-1}{4n}}} = 0.0035$, very accurate\n",
@@ -1305,7 +1306,7 @@
       "\n",
       "$$\\small \\begin{array}{l} \n",
       "l &= \\left(\\frac{c_1}{m^{2\\gamma}} + \\frac{c_2}{n}\\right) + \\lambda(mn - c) \\\\\n",
-      "\\frac{\\partial l}{\\partial m} &= -c_1\\frac{2\\gamma}{m^{2\\gamma-1}} + \\lambda n = 0 \\\\\n",
+      "\\frac{\\partial l}{\\partial m} &= -c_1\\frac{2\\gamma}{m^{2\\gamma+1}} + \\lambda n = 0 \\\\\n",
       "\\frac{\\partial l}{\\partial n} &= -c_2\\frac{1}{n^2} + \\lambda m = 0 \\\\\n",
       "\\lambda mn &= \\frac{2c_1\\gamma}{m^{2\\gamma}} = \\frac{c_2}{n}\n",
       "\\end{array}$$\n",
