--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -1370,7 +1370,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1469,28 +1473,6 @@
     "* always use error bound when comparing floating numbers, such as ```numpy.allclose()``` \n",
     "* try to use integer comparison as the end condition for loops\n",
     "  * integer representation and arithmetic in IEEE 754 is exact"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b =  [ 0.          0.33333333]\n"
-     ]
-    }
-   ],
-   "source": [
-    "b = arange(0, 1 - 1./3. - 1e-10, 1./3)\n",
-    "print(\"b = \", b)"
    ]
   },
   {
