--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -599,7 +599,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Pivoting\n",
     "\n",
