--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -383,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import inst\n",
@@ -503,6 +505,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -573,6 +576,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1154,7 +1158,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nn, rho = 100, .7\n",
@@ -1237,7 +1243,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def irc1(nsim, d) :\n",
@@ -1264,7 +1272,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "uo = -1.5\n",
@@ -1642,7 +1652,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# need to do \"pip install sobol_seq\"\n",
@@ -1896,7 +1908,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p = 2**15\n",
@@ -2015,7 +2029,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ubs = []\n",
@@ -2186,7 +2202,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def stratify(u, bs, shuffle) :\n",
