--- a/Lecture8.ipynb
+++ b/Lecture8.ipynb
@@ -732,15 +732,17 @@
     "#### 2.1 Steepest Descent Method\n",
     "\n",
     "* If the objective function is differentiable, we have\n",
+    "\n",
     "$$\n",
-    "f(\\bx^k + t \\bs\\delta x) \\approx f(\\bx^k) \n",
-    "                       +t [ {\\bs\\nabla} f(\\bx^k)^T {\\bs\\delta x} ]                        \n",
+    "f(\\bx^k + t \\bs\\delta x) \\approx f(\\bx^k) + t [ {\\bs\\nabla} f(\\bx^k)^T {\\bs\\delta x} ]                        \n",
     "$$\n",
     "\n",
     "* This means choosing **gradient** direction\n",
+    "\n",
     "$$\n",
     "\\bs\\delta x = - {\\bs\\nabla} f(\\bx^k)\n",
     "$$\n",
+    "\n",
     "will lead to the **steepest** descent at points sufficiently close to $\\bx^k$.\n",
     "\n",
     "\n"
