--- a/Lecture9.ipynb
+++ b/Lecture9.ipynb
@@ -707,14 +707,19 @@
    "source": [
     "\n",
     "The LP problem can be formulated as:\n",
-    "\\begin{equation*}\n",
+    "\n",
+    "$$\n",
     "\\min_{\\bx} \\left( \\sum_i x_i P_i \\right)\n",
-    "\\end{equation*}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
     "\\begin{aligned}\n",
     "\\mbox{such that} & \\sum_{i=1,10; M_i\\geq k} \\; C_i(t)x_i +100\\sum_{i=1,10; M_i= k} \\;x_i - s_k + s_{k-1}= L_k, \\;\\;  k = 1,2,\\cdots, 8\n",
     "\\\\\n",
     "     & x_i \\geq 0 \\;\\; i = 1,2,\\cdots, 10; \\;\\;\\; s_k \\geq 0 \\;\\;  k = 1,2,\\cdots, 8\n",
     "\\end{aligned}\n",
+    "$$\n",
+    "\n",
     "where we assume $s_0 = 0$.\n",
     "\n"
    ]
@@ -864,13 +869,15 @@
     "\n",
     "And here is the set of bonds that can be invested in:\n",
     "\n",
+    "<small>\n",
+    "\n",
     "|  Bonds | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 |\n",
     "| :-----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: |\n",
     "|  Price | 102 | 101.625 | 103 | 102 | 102 | 103 | 101 | 101.5 | 102 | 102.75 | 103 | 104 |\n",
     "|  Coupon(%) | 1.25 | 1.5 | 2.5 | 1.75 | 2.125 | 2.5 | 2.625 | 3 | 3.125 | 3.5 |  3.75 | 4.5 |\n",
     "|  Maturity(Years) | 1 | 2 | 2 | 3 | 4 | 5 | 5 | 6 | 7 | 8 |  8 | 9 |\n",
     "\n",
-    "\n",
+    "<normal>\n",
     "Find the **least cost** portfolio of bonds so that the pension fund can meet its future liabilities. Please show your LP problem set up.\n"
    ]
   }
